# Alea

./: .gitignore  CHANGELOG-chords.md  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: Hardware.cpp  Hardware.h  Params.cpp  Params.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.cpp  Presets.h  Sound.cpp  Sound.h  UI.cpp  UI.h
Source/Chords/: ChordEngine.cpp  ChordEngine.h  ChordsEditor.cpp  ChordsEditor.h  ChordsProcessor.cpp  ChordsProcessor.h
Tools/: ChordsUISnapshot.cpp  SamplePrep.cpp  UISnapshot.cpp
installer/windows/: alea.iss  chords.iss
scripts/: make_chords_installer.sh  make_installer.sh  update_screenshots.sh
